--- a/nav.html
+++ b/nav.html
@@ -60,7 +60,7 @@ li a:hover {
  }
  100%{
  left: 0;
- }
+ }}
 
 
 </style>
@@ -74,7 +74,7 @@ li a:hover {
 <h2 style="text-align: center;color:yellow;">BestSellers</h2>
 <div id="slideshow">
 <figure>
- <a href="http://157.90.150.166/STWItems/index.php#130"><img src="130.JPG"></a>
- <a href="http://157.90.150.166/STWItems/index.php#mats"><img src="mats.JPG"></a>
- <a href="http://157.90.150.166/STWItems/index.php#5random"><img src="random.jpg"></a>
-</figure>
+ <a href="file:///Users/martinaioio/Desktop/HXDeveloping/STWItems/index.html#130"><img src="130.JPG"></a>
+ <a href="file:///Users/martinaioio/Desktop/HXDeveloping/STWItems/index.html#mats"><img src="mats.JPG"></a>
+ <a href="file:///Users/martinaioio/Desktop/HXDeveloping/STWItems/index.html#5random"><img src="random.jpg"></a>
+ </figure>
